margin-bottom-16 to mb-16

--- a/templates/accounts/apikey.html
+++ b/templates/accounts/apikey.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="flex-this column w-100 mr-1p">
-            <div><h4 class="margin-top-16">Delete API Key</h4></div>
+            <div><h4 class="mt-16">Delete API Key</h4></div>
     
             <div class="w-70 mb-2p">
                 <p class="mt-0">You can only have one API key at a time. If you need to generate a new one, you must delete this one first. To delete your current key, click the button below.</p>
