--- a/templates/accounts/manage-orgs.html
+++ b/templates/accounts/manage-orgs.html
@@ -40,7 +40,7 @@
         {% include 'snippets/modals/leave-account-modal.html' %}
     {% endfor %}
 
-    <div class="w-20 margin-top-16">
+    <div class="w-20 mt-16">
         <a class="primary-btn white-btn" href="{% url 'select-account' %}">Create a new account</a>
     </div>
 
