--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -79,7 +79,7 @@
     </div>
     {% endif %}
 
-    <div class="flex-this row margin-top-16">
+    <div class="flex-this row mt-16">
       <div class="flex-this align-center space-between">
         <div class="text-align-right mr-1p">
           <input type="checkbox" name="terms-agreement" required />
