--- a/templates/accounts/update-profile.html
+++ b/templates/accounts/update-profile.html
@@ -112,7 +112,7 @@
                     <small>Providing your personal information is optional.
                         By providing it, you consent for it to be shown to other Hub users, see the <a href="https://localcontexts.org/privacy-policy/" class="darkteal-text underline-hover" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.</small>
                 </p>  
-                <div class="margin-bottom-16 margin-top-16">
+                <div class="mb-16 mt-16">
                     <button class="primary-btn action-btn mt-2p">Save changes <i class="fa fa-arrow-right"></i></button>
                 </div>  
             </div>
