--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -6,8 +6,8 @@
 {% for tran_form in add_translation_formset %}
 {% for hidden in tran_form.hidden_fields %}{{ hidden }}{% endfor %}
 
-    <div id="translation-form-container" class="flex-this column margin-top-16">
-        <div class="margin-top-16">
+    <div id="translation-form-container" class="flex-this column mt-16">
+        <div class="mt-16">
             <h3 class="mb-0">Add Label Translations</h3>
             <p class="w-80">Here you can add any additional translations of your Label, this is an optional step.</p>
         </div>
