--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -9,7 +9,7 @@
                     Account
                 </h2>
             </div>
-            <div class="margin-top-16">Or <a class="default-a" href="{% url 'select-account' %}">choose another account</a></div>
+            <div class="mt-16">Or <a class="default-a" href="{% url 'select-account' %}">choose another account</a></div>
         </div>
         <p class="w-90">
             Search the registry of {% if community %} communities {% endif %}{% if institution %} institutions {% endif %} that have accounts on the Local Contexts Hub. 
