--- a/templates/partials/_member-requests.html
+++ b/templates/partials/_member-requests.html
@@ -1,5 +1,5 @@
 <div class="content-card-v2 content-card-space">
-    <div class="margin-bottom-16">
+    <div class="mb-16">
         <small class="bold">
             <a 
                 class="darkteal-text" 
@@ -76,7 +76,7 @@
                                         name="join_request_id"
                                     >
                                 
-                                    <div class="flex-this flex-end margin-top-16">
+                                    <div class="flex-this flex-end mt-16">
                                         <button class="primary-btn action-btn">Accept Request</button>
                                     </div>
 
