--- a/templates/partials/footers/_auth-footer.html
+++ b/templates/partials/footers/_auth-footer.html
@@ -48,7 +48,7 @@
             </div>
 
             <!-- AFFILIATE LOGOS -->
-            <div class="w-100 margin-top-16">
+            <div class="w-100 mt-16">
                 <div class="flex-this row space-between wrap">
                     <div><img loading="lazy" src="{% static 'images/footer/Local-Contexts-Logo-White.png' %}" alt="Local Contexts logo"></div>
                     <div><img loading="lazy" src="{% static 'images/footer/NEH-Preferred-Seal-Transparent820.png' %}" alt="National Endowment for the Humanities logo"></div>
