--- a/templates/projects/project-status.html
+++ b/templates/projects/project-status.html
@@ -19,7 +19,7 @@
                 Below you can define your community's decision on whether or not you would like to collaborate using the prompts below.  Or send them a message below the Project information.
             </p>
 
-            <div class="margin-bottom-16">
+            <div class="mb-16">
 
                 {% if member_role == 'admin' or member_role == 'editor' %}
                     <form method="POST" action="">
