--- a/templates/snippets/project_notices.html
+++ b/templates/snippets/project_notices.html
@@ -1,7 +1,7 @@
 {% load static %}{% load custom_project_tags %}
 
 <section>
-    <div class="margin-bottom-16">
+    <div class="mb-16">
         <p>
             Select which Local Contexts Notice(s) apply to this Project. To use the Open to Collaborate Notice, 
             <a 
@@ -17,7 +17,7 @@
     </div>
 
     <!-- NOTICE CHECKBOXES -->
-    <div class="flex-this w-40 space-between ml-16 margin-bottom-16">     
+    <div class="flex-this w-40 space-between ml-16 mb-16">     
         <div class="flex-this column center-text">
             <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" width="73px" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
             <div><p id="title-tk-notice" class="grey-text">Traditional<br> Knowledge Notice</p></div>
