--- a/templates/accounts/change-password.html
+++ b/templates/accounts/change-password.html
@@ -16,7 +16,7 @@
 
                 {% include 'partials/_alerts.html' %}
 
-            <div class="margin-bottom-16">
+            <div class="mb-16">
                 <button class="primary-btn action-btn mt-2p  default-btn-width">Save</button>
             </div>
         </form>
