--- a/templates/accounts/confirm-account.html
+++ b/templates/accounts/confirm-account.html
@@ -24,7 +24,7 @@
     <form id="confirmationForm" action="" method="POST" enctype="multipart/form-data" class="w-100">
         {% csrf_token %}
 
-        <div class="flex-this space-between margin-bottom-16">
+        <div class="flex-this space-between mb-16">
             <div class="mr-8 w-100">
                 <label for="contact_name">
                     Contact name
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="margin-top-16 margin-bottom-16 flex-this w-100">
+        <div class="mt-16 mb-16 flex-this w-100">
             <div class="w-50 mr-8">
                 <div class="hide">{{ form.support_document }}</div>
                 <button id="customFileUploadBtn" class="primary-btn green-btn mr-8 w-100">Upload letter <i class="fa-solid fa-upload"></i></button> 
