--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -46,7 +46,7 @@
                                     </div>
                                 </div>
                                 <label class="mt-2p">What topic(s) are you interested in? <br/> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label>
-                                <div class="flex-this w-100 mt-1p margin-bottom-16">
+                                <div class="flex-this w-100 mt-1p mb-16">
                                     <div class="w-100 mr-1p">
                                         <br>
                                         <input class="newsletter-toggle" type="checkbox" id="tech" name="topic" value="tech">
@@ -63,7 +63,7 @@
                                 </div>
                                 <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response">
                                 <div class="flex-this w-100">
-                                    <div class="w-100 mr-1p margin-top-16">
+                                    <div class="w-100 mr-1p mt-16">
                                         <button type="submit" class="primary-btn action-btn" name="subscribebtn">Subscribe</button>
                                     </div>
                                 </div> 
