--- a/templates/accounts/registry.html
+++ b/templates/accounts/registry.html
@@ -72,7 +72,7 @@
     {% endfor %}
 
     {% if not items %}
-        <div class="dashcard w-100 center-text margin-top-16 margin-bottom-16">
+        <div class="dashcard w-100 center-text mt-16 mb-16">
             <h2>There are no public accounts by that name.</h2>
         </div>  
     {% endif %}
