--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -45,7 +45,7 @@
         <div class="content-card-v2 content-card-space"> 
             <h2 class="mt-0">Proposed Edit</h2>
             <div class="flex-this mb-8 mt-8 about-this-label">
-                <div class="w-20 ml-16 margin-top-16 margin-bottom-16">
+                <div class="w-20 ml-16 mt-16 mb-16">
                     {% if bclabel %}
                         {% include 'bclabels/which-label.html' %}
                     {% endif %}
@@ -63,13 +63,13 @@
                         {% if tklabel.audiofile %} <div><audio src="{{ tklabel.audiofile.url }}" controls></audio></div>{% endif %}
 
                     </div>
-                    <div class="margin-bottom-16">{% if bclabel %}{{ bclabel.label_text }}{% endif %}{% if tklabel %}{{ tklabel.label_text }}{% endif %}</div>
+                    <div class="mb-16">{% if bclabel %}{{ bclabel.label_text }}{% endif %}{% if tklabel %}{{ tklabel.label_text }}{% endif %}</div>
                     
                     {% if bclabel %}
                         {% if bclabel.bclabel_translation.all %}
                             {% for translation in bclabel.bclabel_translation.all %}
                                 <div><p class="bold">{{ translation.translated_name }} | {{ translation.language }}</p></div>
-                                <div class="margin-bottom-16">{{ translation.translated_text }}</div>
+                                <div class="mb-16">{{ translation.translated_text }}</div>
                             {% endfor %}
                         {% endif %}
                     {% endif %}
@@ -78,7 +78,7 @@
                         {% if tklabel.tklabel_translation.all %}
                             {% for translation in tklabel.tklabel_translation.all %}
                                 <div><p class="bold">{{ translation.translated_name }} | {{ translation.language }}</p> </div>
-                                <div class="margin-bottom-16">{{ translation.translated_text }}</div>
+                                <div class="mb-16">{{ translation.translated_text }}</div>
                             {% endfor %}
                         {% endif %}
                     {% endif %}
