--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -16,10 +16,10 @@
 
 <div class="content-card-v2 content-card-space">
     <h3 class="mt-0">Step 1. Select a Label to customize</h3>
-    <div class="margin-bottom-16 margin-top-16 w-100 about-this-label">    
+    <div class="mb-16 mt-16 w-100 about-this-label">    
         <div class="flex-this ml-16 mr-16 pointer-event-none">
 
-            <div id="target-img-div" class="margin-top-16">
+            <div id="target-img-div" class="mt-16">
                 <img
                     loading="lazy"
                     {% if label_code == 'bcr' %}
@@ -218,7 +218,7 @@
             <div>
                 <input id="input-label-name" type="hidden" value="" name="input-label-name">
 
-                <div class="w-30 margin-bottom-16">
+                <div class="w-30 mb-16">
                     <label>Label name</label>
                     {{ form.name }}
                 </div>
@@ -227,7 +227,7 @@
                     <div class="msg-red w-50"><small>{{ form.name.errors.as_text }}</small></div> 
                 {% endif %}
 
-                <div class="w-30 margin-bottom-16">
+                <div class="w-30 mb-16">
                     <div class="flex-this">
                         <label class='block'>Label Language <small>(select from dropdown)</small></label>
                         <div class="tooltip" style="margin-top: 5px; margin-left: 5px;"><strong>i</strong>
@@ -284,7 +284,7 @@
             <!-- Add translation -->
             {% include 'partials/_add-translation.html' %}
 
-            <div class="text-align-right margin-bottom-16 mt-2p flex-this align-center">
+            <div class="text-align-right mb-16 mt-2p flex-this align-center">
                 <button id="saveLabelBtn" name="save_label_btn" class="primary-btn action-btn">Save Label</button> 
                 <small id="language-error" class="red-text ml-1p hide">Please clear or select a language from the dropdown list.</small>
             </div>
