--- a/templates/communities/view-label.html
+++ b/templates/communities/view-label.html
@@ -1,7 +1,7 @@
 {% extends 'account-base.html' %} {% block title %} View Label {% endblock %}{% load static %} {% load custom_tags %} {% block community_content %}
 
 <section class="content-card-v2 content-card-space">
-    <div class="margin-bottom-16">
+    <div class="mb-16">
         <small class="bold">
             <a class="darkteal-text"href="{% url 'select-label' community.id %}">Labels</a> 
             <span class="grey-text"> >> View Label</span>
@@ -158,12 +158,12 @@
                                         {% else %}
                                             <h3 class="bold"><i>Version {{ version.version }}: Created {{ version.created|date:'M Y'}}</i></h3>
                                             <i>
-                                                <span class="bold block margin-bottom-16">Label text</span>
+                                                <span class="bold block mb-16">Label text</span>
                                                 {{ version.version_text }}
 
                                                 {% if version.label_version_translation.all %}
                                                     {% for translated_version in version.label_version_translation.all %}
-                                                        <span class="bold block margin-bottom-16 margin-top-16">{{ translated_version.language }}</span>
+                                                        <span class="bold block mb-16 mt-16">{{ translated_version.language }}</span>
                                                         {{ translated_version.translated_text }}
                                                     {% endfor %}
                                                 {% endif %}
@@ -186,7 +186,7 @@
         <div class="flex-this w-100 wrap">
             {% if bclabels %}
                 {% for bclabel in bclabels %}
-                    <div class="condensed-labels center-text mr-16 margin-bottom-16">
+                    <div class="condensed-labels center-text mr-16 mb-16">
                         <a class="primary-black-text" href="{% url 'view-label' community.id bclabel.unique_id %}">
                             {% include 'bclabels/mini-labels.html' %}
                             <small class="bold">{{ bclabel.name }}</small>
@@ -197,7 +197,7 @@
 
             {% if tklabels %}
                 {% for tklabel in tklabels %}
-                    <div class="condensed-labels center-text mr-16 margin-bottom-16">
+                    <div class="condensed-labels center-text mr-16 mb-16">
                         <a class="primary-black-text" href="{% url 'view-label' community.id tklabel.unique_id %}">
                             {% include 'tklabels/mini-labels.html' %}
                             <small class="bold">{{ tklabel.name }}</small>
