--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -16,7 +16,7 @@
     <form action="" method="POST" class="flex-this column w-100">
         {% csrf_token %}
 
-        <div class="margin-top-16 w-100">
+        <div class="mt-16 w-100">
             <label for="institution_name">Institution Name</label>
             {{ noror_form.institution_name }}
             <div class="w-100 mt-1p">
@@ -84,7 +84,7 @@
             you indicate below, to discuss which subscription tier is best for your organization.
         </p>
 
-        <div class="flex-this space-between margin-bottom-16">
+        <div class="flex-this space-between mb-16">
             <div class="mr-8 w-100">
                 <label for="contact_name">
                     Contact name
