--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -56,7 +56,7 @@
 {% if community %}
     <section class="dash-driver flex-this column">
         <div class="flex-this space-between">
-            <div class="margin-bottom-16">
+            <div class="mb-16">
                 <small class="bold">Role - Main Admininstrator</small>
             </div>
         </div>
@@ -335,7 +335,7 @@
 {% if institution %}
     <section class="dash-driver flex-this column">
         <div class="flex-this space-between">
-            <div class="margin-bottom-16">
+            <div class="mb-16">
                 <small class="bold">Role - Main Admininstrator</small>
             </div>
         </div>
@@ -670,7 +670,7 @@
                             </div>
                         </div>
 
-                        <div class="flex-this w-100 margin-bottom-16">
+                        <div class="flex-this w-100 mb-16">
                             <div class="w-50 mt-2p">
                                 <button
                                     id="sendMemberInviteBtn"
