--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -480,7 +480,7 @@
                         <label>Website URL</label><br>
                         {{ cc_policy_form.url }}
                     </div>
-                    <div class="flex-this flex-end w-100 margin-top-16">
+                    <div class="flex-this flex-end w-100 mt-16">
                         <button class="primary-btn action-btn" name="add_policy">Add policy </button>    
                     </div>
                 </form>
@@ -519,7 +519,7 @@
                     <br>
                     {{ form.url }}
                 </div>
-                <div class="flex-this flex-end w-100 margin-top-16">
+                <div class="flex-this flex-end w-100 mt-16">
                     <button class="primary-btn action-btn">Add Link</button>    
                 </div>
             </form>
@@ -540,7 +540,7 @@
         </div>
 
         <div class="w-100 flex-this column">
-            <div class="w-100 flex-this column margin-bottom-16">
+            <div class="w-100 flex-this column mb-16">
                 <label class="bold mt-8 mb-8 block">Local Contexts Registry URL</label>
 
                 <div class="text-input-to-copy">
