--- a/templates/partials/infocards/_institution-card.html
+++ b/templates/partials/infocards/_institution-card.html
@@ -28,7 +28,7 @@
             <div class="flex-this gap-half">
                 {% if '/registry/' in request.path %}
                     <div>
-                        <div class="margin-bottom-16">
+                        <div class="mb-16">
                             <a 
                                 class="primary-btn action-btn"
                                 href="{% url 'public-institution' institution.id %}"                    
