--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -35,7 +35,7 @@
       <div class="flex-this gap-half">
         {% if '/registry/' in request.path %}
             <div>
-                <div class="margin-bottom-16">
+                <div class="mb-16">
                     <a 
                         class="primary-btn action-btn"
                         href="{% url 'public-researcher' researcher.id %}"                    
