--- a/templates/partials/infocards/_user-dashcard.html
+++ b/templates/partials/infocards/_user-dashcard.html
@@ -48,7 +48,7 @@
         </div>        
     </div>
 
-    <div class="flex-this margin-top-16">
+    <div class="flex-this mt-16">
         <div class="suggestion-box">
             <small class="block">
                 <span class="bold">Build your profile</span> so that other users on the hub can know more about you<br>
