--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -169,7 +169,7 @@
       </div>
 
     {% if not results and not items %}
-        <div class="w-100 center-text margin-top-16 margin-bottom-16" style="margin-top: 100px;">
+        <div class="w-100 center-text mt-16 mb-16" style="margin-top: 100px;">
             <h2>There are no Projects yet</h2>
             <h3>Let's create a Project!</h3>
             <p>Click the button above to start.</p>
