--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -5,7 +5,7 @@
     <div class="flex-this column w-90">
         <div class="margin-bottom-1 flex-this space-between">
             <h2>Researcher Account</h2>  
-            <div class="margin-top-16">Or <a class="default-a" href="{% url 'select-account' %}">choose another account</a></div>
+            <div class="mt-16">Or <a class="default-a" href="{% url 'select-account' %}">choose another account</a></div>
         </div>
         <div>
             <p class="mt-0 mb-0">A researcher is a person who carries out academic or scientific research independently or in an institution, such as archive, library, museum, historical society, gallery, data repository, or university.</p>
