--- a/templates/snippets/modals/change-member-modal.html
+++ b/templates/snippets/modals/change-member-modal.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <div class="flex-this flex-end w-100 text-align-center margin-top-16">
+                <div class="flex-this flex-end w-100 text-align-center mt-16">
                     <button id="continueRoleChangeBtn" class="primary-btn white-btn mr-1p" name="change_member_role_btn">Update member role</button>    
                     <div 
                         id="closeRoleChangeModal_{% if admin %}{{ admin.id }}{% endif %}{% if editor %}{{ editor.id }}{% endif %}{% if viewer %}{{ viewer.id }}{% endif %}" 
