--- a/templates/snippets/modals/onboarding.html
+++ b/templates/snippets/modals/onboarding.html
@@ -47,7 +47,7 @@
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
                             <div class="right-text"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16">
+                            <div class="center-text mt-16">
                                 <img loading="lazy" src="{% static 'images/onboarding/profile-img.png' %}">
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
                             <div class="right-text"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16">
+                            <div class="center-text mt-16">
                                 <img loading="lazy" src="{% static 'images/onboarding/accounts-img.png' %}">
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
                             <div class="right-text"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16"><img loading="lazy" src="{% static 'images/onboarding/projects-img.png' %}"></div>
+                            <div class="center-text mt-16"><img loading="lazy" src="{% static 'images/onboarding/projects-img.png' %}"></div>
                             <div class="section-bar-container"><img loading="lazy" src="{% static 'images/onboarding/section-bar-projects.png' %}"></div>
                         </div>
                     </div>                     
@@ -133,7 +133,7 @@
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
                             <div class="right-text"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16">
+                            <div class="center-text mt-16">
                                 <img loading="lazy" src="{% static 'images/onboarding/labels-img.png' %}">
                             </div>
                             <div class="section-bar-container"><img loading="lazy" src="{% static 'images/onboarding/section-bar-labels.png' %}"></div>
@@ -163,7 +163,7 @@
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
                             <div class="right-text"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16"><img loading="lazy" src="{% static 'images/onboarding/notices-img.png' %}"></div>
+                            <div class="center-text mt-16"><img loading="lazy" src="{% static 'images/onboarding/notices-img.png' %}"></div>
                             <div class="section-bar-container"><img loading="lazy" src="{% static 'images/onboarding/section-bar-notices.png' %}"></div>
 
                         </div>
@@ -195,8 +195,8 @@
                     </div>
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
-                            <div class="right-text margin-bottom-16"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16"><img loading="lazy" src="{% static 'images/onboarding/members-img.png' %}"></div>
+                            <div class="right-text mb-16"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
+                            <div class="center-text mt-16"><img loading="lazy" src="{% static 'images/onboarding/members-img.png' %}"></div>
                             <div class="section-bar-container"><img loading="lazy" src="{% static 'images/onboarding/section-bar-members.png' %}"></div>
                         </div>
                     </div>                     
@@ -224,8 +224,8 @@
                     </div>
                     <div class="w-50 onboard-blue-bg modal-right-half">
                         <div class="onboard-content-margin flex-this column">
-                            <div class="right-text margin-bottom-16"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
-                            <div class="center-text margin-top-16"><img loading="lazy" src="{% static 'images/onboarding/connections.png' %}"></div>
+                            <div class="right-text mb-16"><button class="close-onboarding-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button></div>
+                            <div class="center-text mt-16"><img loading="lazy" src="{% static 'images/onboarding/connections.png' %}"></div>
                             <div class="section-bar-container"><img loading="lazy" src="{% static 'images/onboarding/section-bar-connections.png' %}"></div>
                         </div>
                     </div>                     
